# NotifCraft

./: .gitignore  Dockerfile  init.sh  pyproject.toml  requirements.txt  test.json  test.py
.github/workflows/: release.yml
app/: app.py  discord.py  settings.py  utils.py
base_templates/: bazarr.jinja  qbitmanage.jinja  test.jinja  watchtower.jinja
notifcraft/: app.py  settings.py
notifcraft/services/: bazarr.py  jellyfin.py  qbitmanage.py  test.py  watchtower.py
notifcraft/templates/: jellyfin.jinja
notifcraft/utils/: discord.py
templates/base/: jellyfin.jinja
