[tool.poetry]
name = "NotifCraft"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.2"
pydantic-settings = "^2.2.1"
requests = "^2.31.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
